# pico_meteo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/bme280/: CMakeLists.txt  bme280.c  bme280.h  bme280_defs.h
libs/ssd1306/: CMakeLists.txt  font.h  ssd1306.c  ssd1306.h
src/: handlers.c  handlers.h  main.c  utils.c  utils.h
www/: index.html  main.js  style.css  www.yaml
